# libosdp

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .travis.yml  CHANGELOG  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  README.rst  SECURITY.md  TODO  configure  configure.sh  libosdp.pc.in  library.json  shell.nix
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-ci.yml  codeql-analysis.yml  create-release.yml  cross-plaform-build.yml  publish-crates.yml  (+5 more)
CHANGELOG/: RELEASE-v0.1-alpha.md  RELEASE-v0.2-beta-1.md  RELEASE-v0.3-beta-2.md  RELEASE-v0.4-beta-3.md  RELEASE-v1.0.0.md  RELEASE-v1.1.0.md  RELEASE-v1.2.0.md  RELEASE-v1.3.0.md  RELEASE-v1.4.0.md  RELEASE-v1.5.0.md  RELEASE-v2.0.0.md  RELEASE-v2.1.0.md  RELEASE-v2.2.0.md  RELEASE-v2.3.0.md  RELEASE-v2.4.0.md  RELEASE-v3.0.0.md  RELEASE-v3.0.1.md  RELEASE-v3.0.2.md  RELEASE-v3.0.3.md  RELEASE-v3.0.4.md  RELEASE-v3.0.5.md  RELEASE-v3.0.6.md  RELEASE-v3.0.7.md  RELEASE-v3.0.8.md  RELEASE-v3.1.0.md  RELEASE-v3.2.0.md
cmake/: AddCCompilerFlag.cmake  BuildMetaData.cmake  BuildType.cmake  CreatePackages.cmake  Doxyfile.in  FindMbedTLS.cmake  GitInfo.cmake  GitSubmodules.cmake  LibOSDPConfig.cmake.in  Quirks.cmake  UseLibOSDP.cmake  libosdpConfig.cmake.in
doc/: CMakeLists.txt  Doxyfile.in  README.md  conf.py.in  index.rst  osdp-command-structure.md  osdp-commands-and-replys.md  osdp-design.md  osdp-packet-structure.md  osdp-pd-capabilities.md  osdp-secure-channel.md  osdpctl-configuration.md  todo.rst
doc/api/: channel.rst  command-structure.rst  control-panel.rst  event-structure.rst  index.rst  miscellaneous.rst  pd-info.rst  peripheral-device.rst
doc/libosdp/: build-and-install.rst  compatibility.rst  cross-compiling.rst  debugging.rst  index.rst  secure-channel.rst
doc/osdpctl/: configuration.rst  index.rst  introduction.rst
doc/protocol/: command-structure.rst  commands-and-replies.rst  faq.rst  index.rst  introduction.rst  packet-structure.rst  pd-capabilities.rst
examples/cpp/: CMakeLists.txt  Makefile  cp_app.cpp  pd_app.cpp
include/: osdp.h  osdp.hpp  osdp_cmd.h  osdp_config.h.in  osdp_export.h  osdp_types.h
misc/: libosdp.pc.in  osdp_dissector.lua
osdpctl/: CMakeLists.txt  Cargo.toml  README.md  README.rst  arg-parser.c  arg-parser.h  arg_parser.c  arg_parser.h  channel.c  channel_custom.c  channel_msgq.c  channel_uart.c  cmd_others.c  cmd_send.c  cmd_start.c  common.h  config.c  config_parser.c  ini_parser.c  osdpctl.c  sample_cp.ini  sample_pd.ini  serial.c  strutils.c  uart.h  utils.c
osdpctl/archive/: arg_parser.c  cmd_start.c  osdpctl.c
osdpctl/archive/include/: ini_parser.h
osdpctl/config/: cp-multiple-pd.cfg  cp-multiple-pd.ini  cp-single-pd.cfg  cp-single-pd.ini  msgq-cp-multiple-pd.cfg  msgq-cp-single-pd.cfg  msgq-pd-0.cfg  msgq-pd-1.cfg  osdpctl.cfg  pd-0.cfg  pd-0.ini  pd-1.cfg  pd-1.ini  uart-cp.cfg  uart-pd.cfg
osdpctl/config/devices/: cp-multiple-pd.cfg  cp-single-pd.cfg  pd-0.cfg  pd-1.cfg
osdpctl/include/: arg_parser.h  common.h  serial.h
osdpctl/src/: config.rs  cp.rs  daemonize.rs  main.rs  pd.rs
platformio/: osdp_config.h  osdp_export.h  platformio.cpp
pytest/: CMakeLists.txt  _test_connection_topologies.py  conftest.py  test_commands.py  test_file_tx.py  test_sc_keys.py
python/: CMakeLists.txt  MANIFEST.in  README.md  common.c  common.h  example.py  pyosdp.c  pyosdp.h  pyosdp_base.c  pyosdp_cmd.c  pyosdp_cp.c  pyosdp_data.c  pyosdp_pd.c  pyosdp_utils.c  pyproject.toml  setup.py  setup.py.in
python/osdp/: __init__.py  channel.py  constants.py  control_panel.py  helpers.py  key_store.py  peripheral_device.py
python/osdp_sys/: base.c  cp.c  data.c  data.c.orig  data.c.rej  module.c  module.h  pd.c  utils.c
rust/: .gitignore  Cargo.toml  README.md  build.rs  config.toml
rust/examples/: cp.rs  pd.rs
rust/src/: channel.rs  commands.rs  common.rs  cp.rs  error.rs  events.rs  file.rs  lib.rs  pd.rs  pdcap.rs  pdid.rs  pdinfo.rs
rust/src/channel/: memory_channel.rs  mod.rs  thread_bus.rs  unix_channel.rs
rust/src/osdp_sys/: mod.rs
rust/src/types/: commands.rs  events.rs  mod.rs  pdcap.rs  pdid.rs  pdinfo.rs
rust/tests/: commands.rs
rust/tests/common/: device.rs  mod.rs  threadbus.rs
rust/util/: lib.rs  thread_bus.rs
sample/: CMakeLists.txt  cp_app.c  cp_app.py  osdp-cp-mode.c  pd_app.c  pd_app.py  rs232.c  rs232.h  sample-cp-app.c  sample-pd-app.c  uart.c  uart.h
samples/: README.md  cp_app.py  pd_app.c  pd_app.py
samples/c/: CMakeLists.txt  README.md  cp_app.c  pd_app.c
samples/cpp/: CMakeLists.txt  Makefile  cp_app.cpp  pd_app.cpp
scripts/: changelog_tool.py  clang-format-check.sh  gen-changelog.sh  gen-compile-commands.sh  install-git-hooks.sh  make-html-docs.sh  make-release.sh  release.sh  run_pytests.sh  run_tests.sh
src/: CMakeLists.txt  common-phy.c  common.c  common.h  cp-diag.c  cp-fsm.c  cp-phy.c  cp-private.h  cp.c  osdp-cp.c  osdp_aes.c  osdp_common.c  osdp_common.h  osdp_common_phy.c  osdp_config.h.in  osdp_cp.c  osdp_cp_fsm.c  osdp_cp_phy.c  osdp_cp_private.h  osdp_diag.c  osdp_diag.h  osdp_file.c  osdp_file.h  osdp_metrics.c  osdp_metrics.h  osdp_pcap.c  osdp_pcap.h  osdp_pd.c  osdp_pd_phy.c  osdp_pd_private.h  osdp_phy.c  osdp_sc.c  osdp_trs.c  osdp_trs.h  pd-phy.c  pd-private.h  pd.c  phy.c
src/crypto/: mbedtls.c  openssl.c  tinyaes.c  tinyaes_src.c
src/include/: osdp_aes.h  osdp_common.h  osdp_config.h  osdp_config.h.in
test/: CMakeLists.txt  README.md  test-commands.c  test-cp-fsm.c  test-cp-phy-fsm.c  test-cp-phy.c  test-file.c  test-mixed-fsm.c  test.c  test.h
tests/unit-tests/: CMakeLists.txt  test-async-fuzz.c  test-commands.c  test-cp-fsm.c  test-cp-phy-fsm.c  test-cp-phy.c  test-events.c  test-file.c  test-hotplug.c  test-notifications.c  test-pd-phy.c  test-sc-sia-vectors.c  test-sc.c  test-seq-mismatch.c  test.c  test.h
zephyr/: CMakeLists.txt  Kconfig  module.yml  osdp.h  osdp_common.h  osdp_pd.c  osdp_phy.c  osdp_zephyr.c
zephyr/src/: osdp.c
zephyr/tools/: export.sh  import.sh
(+51 files in other folders)
