[package]
edition = "2021"
name = "libosdp"
version = "0.1.4"
authors = ["Siddharth Chandrasekaran <sidcha.dev@gmail.com>"]
description = "Library implementation of IEC 60839-11-5 OSDP (Open Supervised Device Protocol)"
documentation = "https://docs.rs/libosdp"
homepage = "https://libosdp.sidcha.dev/"
readme = "README.md"
repository = "https://github.com/goToMain/libosdp"
license = "Apache-2.0"
keywords = ["osdp", "libosdp", "acs", "sia", "weigand" ]
categories = ["development-tools", "embedded"]

[build-dependencies]
anyhow = "1.0.75"
cc = "1.0.83"
bindgen = "0.68.1"

[dependencies]
bitflags = "2.4.0"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.20"
multiqueue = "0.3.2"
once_cell = "1.18.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_with = "3.4.0"
thiserror = "1.0.50"
