[package]
edition = "2021"
name = "libosdp"
version = "0.1.6"
authors = ["Siddharth Chandrasekaran <sidcha.dev@gmail.com>"]
description = "Library implementation of IEC 60839-11-5 OSDP (Open Supervised Device Protocol)"
documentation = "https://docs.rs/libosdp"
homepage = "https://libosdp.sidcha.dev/"
readme = "README.md"
repository = "https://github.com/goToMain/libosdp"
license = "Apache-2.0"
keywords = ["osdp", "libosdp", "acs", "sia", "weigand"]
categories = ["development-tools", "embedded"]

[dependencies]
bitflags = "2.4.0"
embedded-io = "0.6.1"
libosdp-sys = "0.1.3"
log = "0.4.20"
once_cell = "1.18.0"
parking_lot = { version = "0.12.1", optional = true }
serde = { version = "1.0.192", features = ["derive"] }
spin = "0.9.8"
thiserror = { version = "1.0.50", optional = true }

[dev-dependencies]
env_logger = "0.10.0"

[features]
default = ["std"]
std = ["thiserror", "parking_lot"]
